# BugVault

./: .env.example  .gitignore  README.ja.md  README.md  README.zh.md  REASONIX.md  RELEASE_NOTES.md  main.py  pyproject.toml  reasonix.toml
doc/01分析/: 01.行业竞品分析与产品定位报告.md  03.为什么选择LanceDB.md
doc/02设计/: 01.design.md  02.arch_v2.md  03.注意事项.md  04.v1.1-architecture.md  adr-cross-encoder-vs-colbert.md
doc/todo/: 01todo.md
docs/judge/: v1.1.1-review.md
docs/refer/分析/: 02.为什么不做成skill.md  04.为什么选择SDK.md  05.交付形式.md
docs/refer/设计/: 02.arch.md  03.arch_v3.md  04.v1.1-architecture.md  evaluation-strategy.md  metadata-filtering.md  rfc-001-smart-dedup.md  rfc-002-sentence-window.md  v1.1.1-technical-decisions.md
docs/tests/: v1.1.1-release-validation.md  v1.1.1-test-report.md
docs/tests/v1.1.1/: final-report.md  retrieval-validation.md
docs/v2.0/: convention-spec.md  v2.0.0-release-notes.md
scripts/: import_external.py  ingest_so_stream.py  migrate_v2.py  rag_evaluation_report.py  rebuild_index.py  retrieve_nginx_502.py  test_chunk_pipeline.py  test_full_pipeline.py
src/bugvault/: __init__.py  config.py  main.py
src/bugvault/database/: lancedb_client.py
src/bugvault/mcp_tools/: tools.py
src/bugvault/models/: bug_record.py  convention_record.py  rag_eval_result.py  reflection_rule.py
src/bugvault/services/: archive_svc.py  db_maintenance_svc.py  embedding_svc.py  (+5 more)
tests/: conftest.py  run_sample_test.py  test_convention_services.py  test_core.py  test_integration.py  test_mcp_protocol.py  test_p0_critical.py  test_p1p2_extended.py  test_v2_services.py
(+3 files in other folders)
