[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bugvault"
version = "0.1.0"
description = "Bug Experience Vault & Intelligent Retrieval System - MCP Server for persistent bug troubleshooting memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
    "lancedb>=0.20.0",
    "fastembed>=0.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyarrow>=19.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
